[package]
name = "opal"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
clap = "2.33"
env_logger = "0.9"
log = "0.4"
mio = { version = "0.7", features = ["os-poll", "net"] }
percent-encoding = "2.1"
ring = "0.16"
rustls = { version  = "0.20", features = ["dangerous_configuration"] }
rustls-pemfile = "0.2"
url = "2.2"
webpki = "0.22"
x509-parser = "0.12"
